2017-09-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use include_directories instead of explicit -I…

	* libbalsa/imap/meson.build:
	* libbalsa/meson.build:
	* libinit_balsa/meson.build:
	* libnetclient/meson.build:
	* libnetclient/test/meson.build:
	* meson.build:
	* src/meson.build:

2017-09-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/filter-run-dialog.c: include filter-funcs.h instead of
	libbalsa/filter-funcs.h, same as elsewhere.

2017-09-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-app.c (balsa_find_iter_by_data): we no longer ever define
	BALSA_DEBUG_THREADS.

2017-09-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove 'debug-threads' option

	* meson.build: do not use it.
	* meson_options.txt: do not define it.

2017-09-23  Albrecht Dreß <albrecht.dress@arcor.de>

	Remove deprecated gdk_threads_* stuff

	In an attempt to clean up the code and to simplify the configure
	file, this patch:
	* removes gdk_threads_(enter|leave) calls from the code,
	* removes the related “--enable-debug-threads” configure option and
	* replaces the calls to gdk_threads_add_idle() by g_idle_add().

	* configure.ac:
	* libbalsa/address-view.c (lbav_ensure_blank_line):
	* libbalsa/identity.c (sd_response_ok):
	* libbalsa/information.c (libbalsa_information_idle_handler):
	* libbalsa/libbalsa-gpgme-cb.c (get_passphrase_idle):
	* libbalsa/libbalsa.c (ask_idle), (libbalsa_ask):
	* libbalsa/libbalsa.h:
	* libbalsa/mailbox.c (libbalsa_mailbox_close),
	(libbalsa_mailbox_msgno_inserted),
	(libbalsa_mailbox_msgno_filt_in), (libbalsa_mailbox_msgno_removed),
	(libbalsa_mailbox_msgno_filt_out), (lbm_set_threading),
	(mbox_set_sort_column_id), (libbalsa_mailbox_unlink_and_prepend),
	(lbm_set_msg_tree), (libbalsa_mailbox_set_msg_tree):
	* libbalsa/mailbox_imap.c (idle_unread_update_cb),
	(imap_exists_idle):
	* libbalsa/mailbox_local.c (lbm_local_restore_tree),
	(lbml_load_messages_idle_cb),
	(libbalsa_mailbox_local_set_threading):